--- a/routing/taskana-routing-rest/pom.xml
+++ b/routing/taskana-routing-rest/pom.xml
@@ -125,6 +125,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>${version.h2}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
