--- a/common/taskana-common-data/pom.xml
+++ b/common/taskana-common-data/pom.xml
@@ -54,6 +54,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>${version.h2}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
