--- a/lib/taskana-cdi/pom.xml
+++ b/lib/taskana-cdi/pom.xml
@@ -78,6 +78,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>${version.h2}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
