--- a/lib/taskana-spring/pom.xml
+++ b/lib/taskana-spring/pom.xml
@@ -74,6 +74,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>${version.h2}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
