--- a/lib/taskana-test-api/pom.xml
+++ b/lib/taskana-test-api/pom.xml
@@ -73,6 +73,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>${version.h2}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
