--- a/rest/taskana-rest-spring-example-boot/pom.xml
+++ b/rest/taskana-rest-spring-example-boot/pom.xml
@@ -28,6 +28,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>${version.h2}</version>
     </dependency>
     <dependency>
       <groupId>com.ibm.db2.jcc</groupId>
