--- a/rest/taskana-rest-spring-example-common/pom.xml
+++ b/rest/taskana-rest-spring-example-common/pom.xml
@@ -102,6 +102,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>${version.h2}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
