--- a/rest/taskana-rest-spring-example-common/src/test/resources/application.properties
+++ b/rest/taskana-rest-spring-example-common/src/test/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework.security=INFO
 logging.level.org.springframework.ldap=INFO
 ### logging.level.org.springframework=DEBUG
 ######## Taskana DB #######
-datasource.url=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0
+datasource.url=jdbc:h2:mem:taskana;NON_KEYWORDS=KEY,VALUE;IGNORECASE=TRUE;LOCK_MODE=0
 datasource.driverClassName=org.h2.Driver
 datasource.username=sa
 datasource.password=sa
