--- a/rest/taskana-rest-spring-example-wildfly/pom.xml
+++ b/rest/taskana-rest-spring-example-wildfly/pom.xml
@@ -74,6 +74,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>${version.h2}</version>
     </dependency>
 
     <dependency>
